...
            <objects>
                <viewController storyboardIdentifier="SignupViewController" id="BYZ-38-t0r" customClass="SignupViewController" customModule="PhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="iyi-aG-3MI">
                                <rect key="frame" x="30" y="99" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="TOs-9g-Dmq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="namePhonePad" textContentType="name"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VTt-Uo-TWn">
                                <rect key="frame" x="30" y="159" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="lastNameTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="aIw-UZ-ITP"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="jvl-rz-UuO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="m8d-fB-Pxy">
                                <rect key="frame" x="30" y="219" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="6W3-Am-CUT"/>
                                    <constraint firstAttribute="height" constant="40" id="U3v-ha-o3q"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="3Hj-M5-yk2">
                                <rect key="frame" x="30" y="279" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="J5r-Ix-uvo"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="s9x-qR-GYo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rcr-vW-KA4">
                                <rect key="frame" x="30" y="339" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="repeatPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="K4F-fW-Iwp"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="KpF-Eb-xaN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rSn-nW-E3S">
                                <rect key="frame" x="30" y="409" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="KTq-b6-1H0"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign up"/>
                                <connections>
                                    <action selector="signupButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VqD-p2-Z7J"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
