...
		
		
		let alert = UIAlertController(title: "Success", message: "Your request was processed", preferredStyle: .alert)
		alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
		
		DispatchQueue.main.async {
			alert.view.accessibilityIdentifier = "successAlertDialog"
			self.present(alert, animated: true, completion: nil)
		}
	}
	
	func errorHandler(error: SignupError) {
		// TODO:
		let alert = UIAlertController(title: "Error", message: "Your request could not be processed at this time", preferredStyle: .alert)
		alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
		
		DispatchQueue.main.async {
			alert.view.accessibilityIdentifier = "errorAlertDialog"
			self.present(alert, animated: true, completion: nil)
		}
	}
	
	
}
...
